# flightmap

./: .envrc  .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  flake.nix  flightmap.excalidraw  justfile
.github/workflows/: ci.yml
src/: aggregate.rs  bin.rs  climb.rs  geo.rs  igc.rs  lib.rs  main.rs  model.rs  simplify.rs
src/ingest/: local.rs  mod.rs
tests/: snapshot_igc.rs
tests/fixtures/: skytraxx_monte_lema.igc  xctrack_monte_lema.igc
tests/snapshots/: snapshot_igc__skytraxx_monte_lema.snap  snapshot_igc__xctrack_monte_lema.snap
web/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: main.ts  style.css
