[package]
name = "flightmap"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Personal paragliding flight heatmap from IGC tracklogs"
license = "Apache-2.0"
repository = "https://github.com/ruben/flightmap"

[lib]
name = "flightmap"
path = "src/lib.rs"

[[bin]]
name = "flightmap"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
geo = "0.30"
geojson = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
walkdir = "2"
blake3 = "1"
rmp-serde = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
insta = "1"
pretty_assertions = "1"

[profile.release]
debug = "line-tables-only"
lto = "thin"
